--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,3 @@
-# Ignore environment variables file
-.env
-
-# Audio files
-*.wav
-*.mp3
-!tests/fixtures/sample_command.wav
-
-# Ignore Python bytecode
-__pycache__/
-*.pyc
-
-# Ignore logs
-logs/
-
-# Ignore VS Code settings
-.vscode/
-
-# Ignore node modules if you decide to use npm
-node_modules/
-
-# Ignore any local configuration files
-config.local.yaml
-
 # Python
 __pycache__/
 *.py[cod]
@@ -46,10 +22,9 @@ wheels/
 
 # Virtual Environment
 venv/
-ENV/
 env/
+ENV/
 .env
-.venv
 
 # IDE
 .idea/
@@ -58,36 +33,22 @@ env/
 *.swo
 .DS_Store
 
-# Project specific
-*.log
-logs/
-test_db.sqlite
+# Testing
 .coverage
 htmlcov/
 .pytest_cache/
-tests/.env.test
-code_suggestions.md
+.tox/
 
-# Sensitive information
-todos.txt
+# Logs
+*.log
+logs/
+
+# Chrome Extension specific
+extension/node_modules/
+extension/dist/
+extension/*.zip
+
+# Project specific
 .env
-.env.local
-.env.*.local
-
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-venv/
-.env
-
-# IDE
-.idea/
-.vscode/
-*.swp
-*.swo
-
-# OS
-.DS_Store
+*.db
+*.sqlite3
